fix: update background color in dark mode and add product border variable

--- a/public/assets/css/global-components/colors.css
+++ b/public/assets/css/global-components/colors.css
@@ -9,6 +9,7 @@
 
     --back-color: #fff;
     --scrollbar-back: #f1f1f1;
+    --products-border-color: #ede9f7;
 
     --red-0: #BD5D4B;
     --red-1: rgb(199, 69, 69);
